# faoci

./: LICENSE  README.md  pyproject.toml
src/faoci/: __init__.py  cache.py  config.py  database.py  defaults.yaml  fetch.py  interface.py
